@@ -1,3 +1,9 @@
+Wed Feb 16 21:12:34 2011  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: try gnome-help if gtk_open_uri don't work (am
+	  using xfce and for whatever reason it doesn't).  Also fix the
+	  formatting on error/warning dialogs
+
 Tue Nov 23 13:47:15 2010  Jiri (George) Lebl <jirka@5z.com>
 
 	* **/*.png: optimize and quantize pngs a bit further
